tests/golden/type_errors/re_export_missing_name.cd
export missing from "../re_export_direct/lib.cd";
